# forkit-site

./: .containerignore  .dockerignore  .env.example  .gitignore  Containerfile  Gemfile  README.md  _config.yml  compose.yaml  config.toml  i18n-config.ts  i18n.ts  index.html  middleware.ts  next.config.js  package-lock.json  package.json  skills-lock.json  tailwind.config.ts
_includes/: footer.html
_layouts/: default.html
_sass/: _base.scss  _hero.scss  _nav.scss  _responsive.scss  _sections.scss  _variables.scss
app/: globals.css  layout.tsx  page.tsx
components/: cart.tsx  funding-bar.tsx  image-upload.tsx  language-switcher.tsx  menu-item-card.tsx  navbar.tsx  order-tracker.tsx  qr-scanner.tsx  sortable-menu-item.tsx  template-preview.tsx  wallet-button.tsx  wallet-provider.tsx
content/: _index.md
docs/: future-delivery-job-model.md
hooks/: useCart.ts  useEscrow.ts  useOrderStatus.ts  useWallet.ts
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
lib/: auth.ts  constants.ts  fonts.ts  order-dto.ts  templates.ts  types.ts
mcp-server/: .env.example  Cargo.toml  Containerfile  compose.yaml
mcp-server/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
mcp-server/src/: api.rs  main.rs  server.rs  types.rs
messages/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  tr.json  zh.json
prisma/: schema.prisma
sass/: _base.scss  _components.scss  _hero.scss  _nav.scss  _sections.scss  main.scss
(+62 files in other folders)
