[package]
name = "forkme-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for ForkIt — AI interface to the ForkIt food delivery platform"

[[bin]]
name = "forkme-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1.5", features = ["server", "macros", "transport-io", "transport-sse-server"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
schemars = "0.8"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
